[gd_scene load_steps=11 format=3 uid="uid://cym6h2qniubrb"]

[ext_resource type="Script" path="res://experiments/haunting_ground.gd" id="1_uc37t"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rdfg8"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2elpb"]
sky_material = SubResource("ProceduralSkyMaterial_rdfg8")

[sub_resource type="Environment" id="Environment_lknps"]
background_mode = 2
sky = SubResource("Sky_2elpb")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SphereShape3D" id="SphereShape3D_kp8sb"]
radius = 0.26177

[sub_resource type="Animation" id="Animation_p8uxe"]
resource_name = "camera_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-2.34067, 1.15155, 2.63731), Vector3(2.55925, 1.15155, 2.63731)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, -0.313304, 0), Vector3(0, 0.330688, 0)]
}

[sub_resource type="Animation" id="Animation_cdrib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.34067, 1.15155, 2.63731)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.330688, 0)]
}

[sub_resource type="Animation" id="Animation_e7qgv"]
resource_name = "camera_animation_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(3.81722, 0.365845, 0.433185), Vector3(-1.71502, 1.4831, 0.382298)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.198968, 1.56207, 0.539307), Vector3(-0.601196, 1.5616, 0)]
}

[sub_resource type="Animation" id="Animation_fmt0k"]
resource_name = "camera_animation_3"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvocb"]
_data = {
"RESET": SubResource("Animation_cdrib"),
"camera_animation": SubResource("Animation_p8uxe"),
"camera_animation_2": SubResource("Animation_e7qgv"),
"camera_animation_3": SubResource("Animation_fmt0k")
}

[node name="HauntingGround" type="Node3D"]
script = ExtResource("1_uc37t")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lknps")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.945819, 0, 0.324693, 0, 1, 0, -0.324693, 0, 0.945819, -2.34067, 1.15155, 2.63731)
fov = 55.7

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.56329, 0, -1.29405)
radius = 0.270253
height = 1.70903

[node name="Area3D" type="Area3D" parent="CSGCylinder3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCylinder3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.879883, 0)
shape = SubResource("SphereShape3D_kp8sb")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0968018, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Node3D"]
size = Vector3(9.54663, 0.15332, 7.92993)

[node name="CSGBox3D2" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(0.953996, -0.255682, -0.156582, 0.252306, 0.966761, -0.0414117, 0.161966, 3.72529e-09, 0.986796, -1.70072, 0.276367, -2.52483)

[node name="CSGBox3D3" type="CSGBox3D" parent="Node3D"]
transform = Transform3D(0.461476, 0.0607487, 0.88507, 0.122048, 0.983819, -0.131162, -0.878717, 0.168549, 0.446595, -3.20685, -0.121948, -0.127318)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85146, 0, -2.36113)

[node name="CSGSphere3D2" type="CSGSphere3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.48054, 0.450928, -0.270995)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qvocb")
}

[node name="Marker3D1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.81717, 0, -1.81444)

[node name="CSGBox3D" type="CSGBox3D" parent="Marker3D1"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.73888, 0, 0.183183)

[node name="CSGBox3D2" type="CSGBox3D" parent="Marker3D2"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Marker3D3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.86189, 0, -2.95073)

[node name="CSGBox3D3" type="CSGBox3D" parent="Marker3D3"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Marker3D4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.51969, 0, -0.766651)

[node name="CSGBox3D4" type="CSGBox3D" parent="Marker3D4"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Marker3D5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7551, 0, -2.17429)

[node name="CSGBox3D5" type="CSGBox3D" parent="Marker3D5"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Marker3D6" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.41495, 0, -0.05789)

[node name="CSGBox3D6" type="CSGBox3D" parent="Marker3D6"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Proxy1" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1389, 0, -0.0776519)
radius = 0.3
radial_segments = 4

[node name="Proxy2" type="CSGSphere3D" parent="."]
radius = 0.3
radial_segments = 4
